Add landing page

--- a/index.html
+++ b/index.html
@@ -2,58 +2,218 @@
 <html lang="en">
 
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Pin To Papers - Coming Soon</title>
-
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
-  <link href="css/coming-soon.css" rel="stylesheet">
-
+	<!-- set the encoding of your site -->
+	<meta charset="utf-8">
+	<!-- set the viewport width and initial-scale on mobile devices -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Pin to Papers</title>
+	<!-- include the site stylesheet -->
+	<link
+		href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic%7cMontserrat:400,700%7cOxygen:400,300,700'
+		rel='stylesheet' type='text/css'>
+	<!-- include the site stylesheet -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- include the site stylesheet -->
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<!-- include the site stylesheet -->
+	<link rel="stylesheet" href="css/main.css">
+	<!-- include the site stylesheet -->
+	<link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
-
-  <div class="overlay"></div>  
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="mp4/bg.mp4" type="video/mp4">
-  </video>
-
-  <div class="masthead">
-    <div class="masthead-bg"></div>
-    <div class="container h-100">
-      <div class="row h-100">
-        <div class="col-12 my-auto">
-          <div class="masthead-content text-white py-5 py-md-0">
-            <h1 class="mb-3">Pin To Papers</h1>
-            <p class="mb-5">Coming Soon!</p>            
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="social-icons">
-    <ul class="list-unstyled text-center mb-0">      
-      <li class="list-unstyled-item">
-        <a href="https://www.facebook.com/PinToPapers/" target="_blank">
-          <i class="fa fa-facebook-f"></i>
-        </a>
-      </li>      
-    </ul>
-  </div>
-  
+	<!-- main container of all the page elements -->
+	<div id="wrapper">
+		<!-- Page Loader -->
+		<div id="pre-loader" class="loader-container">
+			<div class="loader">
+				<img src="images/svg/rings.svg" alt="loader">
+			</div>
+		</div>
+		<!-- W1 start here -->
+		<div class="w1">
+			<!-- mt header start here -->
+			<header id="mt-header">				
+				<!-- mt bottom bar start here -->
+				<div class="mt-bottom-bar">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-xs-12">
+								<!-- mt logo start here -->
+								<div class="mt-logo"><a href="#"><img src="images/logo.png" alt="Pin to Papers"></a></div>								
+								<!-- mt icon list start here -->
+								<ul class="mt-icon-list">
+									<li class="hidden-lg hidden-md">
+										<a href="#" class="bar-opener mobile-toggle">
+											<span class="bar"></span>
+											<span class="bar small"></span>
+											<span class="bar"></span>
+										</a>
+									</li>
+								</ul><!-- mt icon list end here -->
+								<!-- navigation start here -->
+								<nav id="nav">
+									<ul>
+										<li><a href="#home">Home</a></li>
+										<li><a href="#products">Products</a></li>
+										<li><a href="#about">About</a></li>
+										<li><a href="#contact">Contact</a></li>
+									</ul>
+								</nav>
+								<!-- navigation end here -->
+							</div>
+						</div>
+					</div>
+				</div><!-- mt bottom bar end here -->
+				<span class="mt-side-over"></span>
+			</header><!-- mt header end here -->
+			<!-- mt-mainslider2 start here -->
+			<div id="home" class="mt-mainslider2">				
+				<!-- holder start here -->
+				<div class="holder">
+					<img class="img" src="images/businesspeople.jpg" alt="image description">
+					<!-- caption start here -->
+					<div class="caption add">
+						<div class="c1">
+							<div class="c2">
+								<div class="text">
+									<span class="sub-title">Delivering ultimate solutions for</span>
+									<h1>OFFICE</h1>
+								</div>
+							</div>
+						</div>
+					</div><!-- caption end here -->
+				</div><!-- holder end here -->
+			</div><!-- mt-mainslider2 end here -->
+			<!-- mt main start here -->
+			<main id="mt-main">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<div id="products" class="mt-productsc">
+								<div class="row">
+									<div class="col-xs-12 mt-heading text-uppercase text-center">
+										<h2 class="heading">PRODUCTS</h2>										
+									</div>
+								</div>
+								<div class="banner-frame">
+									<!-- banner 15 start here -->
+									<div class="banner right">
+										<img src="images/office-supplies.jpg" alt="image description">
+										<div class="holder">
+											<h2><strong>Office Supplies</strong></h2>
+										</div>
+									</div><!-- banner 15 end here -->
+									<!-- banner 15 start here -->
+									<div class="banner right">
+										<img src="images/copier-papers.jpg" alt="image description">
+										<div class="holder">
+											<h2><strong>Copier Papers</strong></h2>										
+										</div>
+									</div><!-- banner 15 end here -->
+								</div><!-- banner frame end here -->
+								<div class="banner-frame">
+									<!-- banner 15 start here -->
+									<div class="banner right">
+										<img src="images/office-electronics.jpg" alt="image description">
+										<div class="holder">
+											<h2><strong>Office Electronics</strong></h2>										
+										</div>
+									</div><!-- banner 15 end here -->
+									<!-- banner 15 start here -->
+									<div class="banner right">
+										<img src="images/files-and-folders.jpg" alt="image description">
+										<div class="holder">
+											<h2><strong>Files and Folders</strong></h2>										
+										</div>
+									</div><!-- banner 15 end here -->
+								</div><!-- banner frame end here -->
+							</div>
+							<!-- Mt About Section of the Page -->
+							<div id="about" class="mt-about-sec">
+								<div class="container">
+									<div class="row">
+										<div class="col-xs-12">
+											<div class="txt">
+												<h2 class="text-center">WHO WE ARE?</h2>
+												<p>Morbi in erat malesuada, sollicitudin massa at, tristique nisl. Maecenas id eros scelerisque,
+													vulputate tortor quis, efficitur arcu sed do eiusmod tempor incididunt ut labore et dolore
+													magna aliqua. Umco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+													reprehenderit in voluptate velit sse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+													occaecat cupidatat <strong>Vestibulum sit amet metus euismod, condimentum lectus id, ultrices
+														sem.</strong></p>
+												<p>Fusce mattis nunc lacus, vulputate facilisis dui efficitur ut. Vestibulum sit amet metus
+													euismod, condimentum lectus id, ultrices sem. Morbi in erat malesuada, sollicitudin massa at,
+												</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Mt Contact Detail of the Page -->
+							<div id="contact" class="mt-contact-detail">
+								<div class="container">
+									<div class="row">
+										<div class="col-xs-12 col-sm-4 mt-paddingbottomxs text-center">
+											<span class="icon"><i class="fa fa-map-marker"></i></span>
+											<strong class="title">ADDRESS</strong>
+											<address>C/4/19, Indrajit Baug Society,<br>Nikol Gam Road,<br>Ahmedabad- 382350.</address>
+										</div>
+										<div class="col-xs-12 col-sm-4 mt-paddingbottomxs text-center">
+											<span class="icon"><i class="fa fa-envelope-o"></i></span>
+											<strong class="title">EMAIL</strong>
+											<a href="mailto:info@pintopapers.com" target="_blank">info@pintopapers.com</a>
+										</div>
+										<div class="col-xs-12 col-sm-4 mt-paddingbottomxs text-center">
+											<span class="icon"><i class="fa fa-whatsapp"></i></span>
+											<strong class="title">WHATSAPP</strong>
+											<a href="https://wa.me/919512403686" target="_blank">+91 95124 03686</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</main>
+			<!-- footer of the Page -->
+			<footer id="mt-footer" class="wow fadeInUp">
+				<!-- Footer Area of the Page -->
+				<div class="footer-area">
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12 col-sm-6">
+								<p>© <a href="index.html">Pin to Papers</a> - All rights Reserved</p>
+							</div>
+							<div class="col-xs-12 col-sm-6 text-right">
+								<div class="mt-follow-holder">
+									<!-- Social Network of the Page -->
+									<ul class="list-unstyled social-network">
+										<li><a href="https://www.facebook.com/pintopapers" target="_blank"><i
+													class="fa fa-lg fa-facebook"></i></a></li>
+										<li><a href="https://wa.me/919512403686" target="_blank"><i class="fa fa-lg fa-whatsapp"></i></a>
+										<li><a href="https://www.instagram.com/pintopapers" target="_blank"><i
+													class="fa fa-lg fa-instagram"></i></a></li>
+										<li><a href="https://www.linkedin.com/company/pintopapers" target="_blank"><i
+													class="fa fa-lg fa-linkedin"></i></a></li>
+										</li>
+									</ul>
+									<!-- Social Network of the Page end -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		</div>
+		<!-- Footer Area of the Page end -->
+		</footer><!-- footer of the Page end -->
+	</div>
+	</div>
+	<!-- include jQuery -->
+	<script src="js/jquery.js"></script>
+	<!-- <script src="js/plugins.js"></script> -->
+	<!-- include jQuery -->
+	<script src="js/jquery.main.js"></script>
 </body>
 
 </html>
