Resize images & add overlays

--- a/index.html
+++ b/index.html
@@ -40,19 +40,9 @@
 						<div class="row">
 							<div class="col-xs-12">
 								<!-- mt logo start here -->
-								<div class="mt-logo"><a href="#"><img src="images/logo.png" alt="Pin to Papers"></a></div>								
-								<!-- mt icon list start here -->
-								<ul class="mt-icon-list">
-									<li class="hidden-lg hidden-md">
-										<a href="#" class="bar-opener mobile-toggle">
-											<span class="bar"></span>
-											<span class="bar small"></span>
-											<span class="bar"></span>
-										</a>
-									</li>
-								</ul><!-- mt icon list end here -->
+								<div class="mt-logo"><a href="#"><img src="images/logo.png" alt="Pin to Papers"></a></div>
 								<!-- navigation start here -->
-								<nav id="nav">
+								<nav id="nav" class="hidden-sm">
 									<ul>
 										<li><a href="#home">Home</a></li>
 										<li><a href="#products">Products</a></li>
@@ -72,17 +62,10 @@
 				<!-- holder start here -->
 				<div class="holder">
 					<img class="img" src="images/businesspeople.jpg" alt="image description">
-					<!-- caption start here -->
-					<div class="caption add">
-						<div class="c1">
-							<div class="c2">
-								<div class="text">
-									<span class="sub-title">Delivering ultimate solutions for</span>
-									<h1>OFFICE</h1>
-								</div>
-							</div>
-						</div>
-					</div><!-- caption end here -->
+					<div class="overlay">
+						<span class="sub-title">Delivering ultimate solutions for</span>
+						<h1>OFFICE</h1>
+					</div>
 				</div><!-- holder end here -->
 			</div><!-- mt-mainslider2 end here -->
 			<!-- mt main start here -->
@@ -100,14 +83,14 @@
 									<!-- banner 15 start here -->
 									<div class="banner right">
 										<img src="images/office-supplies.jpg" alt="image description">
-										<div class="holder">
+										<div class="product-overlay">
 											<h2><strong>Office Supplies</strong></h2>
 										</div>
 									</div><!-- banner 15 end here -->
 									<!-- banner 15 start here -->
 									<div class="banner right">
 										<img src="images/copier-papers.jpg" alt="image description">
-										<div class="holder">
+										<div class="product-overlay">
 											<h2><strong>Copier Papers</strong></h2>										
 										</div>
 									</div><!-- banner 15 end here -->
@@ -116,14 +99,14 @@
 									<!-- banner 15 start here -->
 									<div class="banner right">
 										<img src="images/office-electronics.jpg" alt="image description">
-										<div class="holder">
+										<div class="product-overlay">
 											<h2><strong>Office Electronics</strong></h2>										
 										</div>
 									</div><!-- banner 15 end here -->
 									<!-- banner 15 start here -->
 									<div class="banner right">
 										<img src="images/files-and-folders.jpg" alt="image description">
-										<div class="holder">
+										<div class="product-overlay">
 											<h2><strong>Files and Folders</strong></h2>										
 										</div>
 									</div><!-- banner 15 end here -->
@@ -136,15 +119,7 @@
 										<div class="col-xs-12">
 											<div class="txt">
 												<h2 class="text-center">WHO WE ARE?</h2>
-												<p>Morbi in erat malesuada, sollicitudin massa at, tristique nisl. Maecenas id eros scelerisque,
-													vulputate tortor quis, efficitur arcu sed do eiusmod tempor incididunt ut labore et dolore
-													magna aliqua. Umco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-													reprehenderit in voluptate velit sse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-													occaecat cupidatat <strong>Vestibulum sit amet metus euismod, condimentum lectus id, ultrices
-														sem.</strong></p>
-												<p>Fusce mattis nunc lacus, vulputate facilisis dui efficitur ut. Vestibulum sit amet metus
-													euismod, condimentum lectus id, ultrices sem. Morbi in erat malesuada, sollicitudin massa at,
-												</p>
+												<p>Pin to Papers Multiservices is supplier of Copier Paper, Office Supplies and IT Products. In addition, we also supply Files, Folders and Office Consumables. We always believed in constant service offering to our customer by very innovative and unique way. Our dedicated team always try to satisfy our customers by providing best Services and Quality Products which we have. We have large product range which includes all types of office needs. We majorly dealing in Copier Papers, Office Essential Products (Files, folder, Binder clips, Writing Essentials, Art Supplies etc.) and IT Products and Services.</p>
 											</div>
 										</div>
 									</div>
@@ -160,12 +135,16 @@
 											<address>C/4/19, Indrajit Baug Society,<br>Nikol Gam Road,<br>Ahmedabad- 382350.</address>
 										</div>
 										<div class="col-xs-12 col-sm-4 mt-paddingbottomxs text-center">
-											<span class="icon"><i class="fa fa-envelope-o"></i></span>
+											<a href="mailto:info@pintopapers.com">
+												<span class="icon"><i class="fa fa-envelope-o"></i></span>
+											</a>
 											<strong class="title">EMAIL</strong>
 											<a href="mailto:info@pintopapers.com" target="_blank">info@pintopapers.com</a>
 										</div>
 										<div class="col-xs-12 col-sm-4 mt-paddingbottomxs text-center">
-											<span class="icon"><i class="fa fa-whatsapp"></i></span>
+											<a href="https://wa.me/919512403686" target="_blank">
+												<span class="icon"><i class="fa fa-whatsapp"></i></span>
+											</a>
 											<strong class="title">WHATSAPP</strong>
 											<a href="https://wa.me/919512403686" target="_blank">+91 95124 03686</a>
 										</div>
