--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 		href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic%7cMontserrat:400,700%7cOxygen:400,300,700'
 		rel='stylesheet' type='text/css'>
 	<!-- include the site stylesheet -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- include the site stylesheet -->
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<!-- include the site stylesheet -->
 	<link rel="stylesheet" href="css/main.css">
 	<!-- include the site stylesheet -->
@@ -33,32 +35,27 @@
 		<!-- W1 start here -->
 		<div class="w1">
 			<!-- mt header start here -->
-			<header id="mt-header">				
+			<header id="mt-header">
 				<!-- mt bottom bar start here -->
 				<div class="mt-bottom-bar">
 					<div class="container-fluid">
-						<div class="row">
-							<div class="col-xs-12">
-								<!-- mt logo start here -->
-								<div class="mt-logo"><a href="#"><img src="images/logo.png" alt="Pin to Papers"></a></div>
-								<!-- navigation start here -->
-								<nav id="nav" class="hidden-sm">
-									<ul>
-										<li><a href="#home">Home</a></li>
-										<li><a href="#products">Products</a></li>
-										<li><a href="#about">About</a></li>
-										<li><a href="#contact">Contact</a></li>
-									</ul>
-								</nav>
-								<!-- navigation end here -->
-							</div>
+						<div class="d-flex align-items-center justify-content-between">
+							<!-- mt logo start here -->
+							<div class="mt-logo"><img src="images/logo.png" alt="Pin to Papers"></div>
+							<!-- navigation start here -->
+							<nav id="nav" class="hidden-sm">
+								<ul>
+									<li><a href="#home">Home</a></li>
+									<li><a href="#products">Products</a></li>
+									<li><a href="#about">About</a></li>
+									<li><a href="#contact">Contact</a></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
 				</div><!-- mt bottom bar end here -->
-				<span class="mt-side-over"></span>
-			</header><!-- mt header end here -->
-			<!-- mt-mainslider2 start here -->
-			<div id="home" class="mt-mainslider2">				
+			</header>
+			<div id="home" class="mt-mainslider2">
 				<!-- holder start here -->
 				<div class="holder">
 					<img class="img" src="images/businesspeople.jpg" alt="image description">
@@ -67,50 +64,42 @@
 						<h1>OFFICE</h1>
 					</div>
 				</div><!-- holder end here -->
-			</div><!-- mt-mainslider2 end here -->
+			</div>
 			<!-- mt main start here -->
 			<main id="mt-main">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
 							<div id="products" class="mt-productsc">
-								<div class="row">
-									<div class="col-xs-12 mt-heading text-uppercase text-center">
-										<h2 class="heading">PRODUCTS</h2>										
-									</div>
+								<div class="mt-heading text-uppercase text-center">
+									<h2 class="heading">PRODUCTS</h2>
 								</div>
-								<div class="banner-frame">
-									<!-- banner 15 start here -->
-									<div class="banner right">
+								<div class="row">
+									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/office-supplies.jpg" alt="image description">
 										<div class="product-overlay">
-											<h2><strong>Office Supplies</strong></h2>
+											<div class="product-name">Office Supplies</div>
 										</div>
-									</div><!-- banner 15 end here -->
-									<!-- banner 15 start here -->
-									<div class="banner right">
+									</div>
+									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/copier-papers.jpg" alt="image description">
 										<div class="product-overlay">
-											<h2><strong>Copier Papers</strong></h2>										
+											<div class="product-name">Copier Papers</div>
 										</div>
-									</div><!-- banner 15 end here -->
-								</div><!-- banner frame end here -->
-								<div class="banner-frame">
-									<!-- banner 15 start here -->
-									<div class="banner right">
+									</div>
+									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/office-electronics.jpg" alt="image description">
 										<div class="product-overlay">
-											<h2><strong>Office Electronics</strong></h2>										
+											<div class="product-name">Office Electronics</div>
 										</div>
-									</div><!-- banner 15 end here -->
-									<!-- banner 15 start here -->
-									<div class="banner right">
+									</div>
+									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/files-and-folders.jpg" alt="image description">
 										<div class="product-overlay">
-											<h2><strong>Files and Folders</strong></h2>										
+											<div class="product-name">Files and Folders</div>
 										</div>
-									</div><!-- banner 15 end here -->
-								</div><!-- banner frame end here -->
+									</div>
+								</div>
 							</div>
 							<!-- Mt About Section of the Page -->
 							<div id="about" class="mt-about-sec">
@@ -119,7 +108,13 @@
 										<div class="col-xs-12">
 											<div class="txt">
 												<h2 class="text-center">WHO WE ARE?</h2>
-												<p>Pin to Papers Multiservices is supplier of Copier Paper, Office Supplies and IT Products. In addition, we also supply Files, Folders and Office Consumables. We always believed in constant service offering to our customer by very innovative and unique way. Our dedicated team always try to satisfy our customers by providing best Services and Quality Products which we have. We have large product range which includes all types of office needs. We majorly dealing in Copier Papers, Office Essential Products (Files, folder, Binder clips, Writing Essentials, Art Supplies etc.) and IT Products and Services.</p>
+												<p>Pin to Papers Multiservices is supplier of Copier Paper, Office Supplies and IT Products. In
+													addition, we also supply Files, Folders and Office Consumables. We always believed in constant
+													service offering to our customer by very innovative and unique way. Our dedicated team always
+													try to satisfy our customers by providing best Services and Quality Products which we have. We
+													have large product range which includes all types of office needs. We majorly dealing in
+													Copier Papers, Office Essential Products (Files, folder, Binder clips, Writing Essentials, Art
+													Supplies etc.) and IT Products and Services.</p>
 											</div>
 										</div>
 									</div>
