--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
 						<div class="d-flex align-items-center justify-content-between">
 							<!-- mt logo start here -->
 							<div class="mt-logo"><img src="images/logo.png" alt="Pin to Papers"></div>
-							<!-- navigation start here -->
-							<nav id="nav" class="hidden-sm">
-								<ul>
-									<li><a href="#home">Home</a></li>
-									<li><a href="#products">Products</a></li>
-									<li><a href="#about">About</a></li>
-									<li><a href="#contact">Contact</a></li>
-								</ul>
-							</nav>
+							<div class="header-icon">
+								<span class="icon-text black">Chat us on</span>
+								<a href="https://wa.me/919512403686" target="_blank">
+									<span class="icon"><i class="fa fa-whatsapp"></i></span>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div><!-- mt bottom bar end here -->
@@ -58,10 +55,8 @@
 			<div id="home" class="mt-mainslider2">
 				<!-- holder start here -->
 				<div class="holder">
-					<img class="img" src="images/businesspeople.jpg" alt="image description">
-					<div class="overlay">
-						<span class="sub-title">Delivering ultimate solutions for</span>
-						<h1>OFFICE</h1>
+					<div class="main-caption">
+						Delivering ultimate solutions for your office needs
 					</div>
 				</div><!-- holder end here -->
 			</div>
@@ -77,26 +72,26 @@
 								<div class="row">
 									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/office-supplies.jpg" alt="image description">
-										<div class="product-overlay">
-											<div class="product-name">Office Supplies</div>
+										<div class="product-caption">
+											<div class="product-name black">Office Supplies</div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/copier-papers.jpg" alt="image description">
-										<div class="product-overlay">
-											<div class="product-name">Copier Papers</div>
+										<div class="product-caption">
+											<div class="product-name black">Copier Papers</div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/office-electronics.jpg" alt="image description">
-										<div class="product-overlay">
-											<div class="product-name">Office Electronics</div>
+										<div class="product-caption">
+											<div class="product-name black">Office Electronics</div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/files-and-folders.jpg" alt="image description">
-										<div class="product-overlay">
-											<div class="product-name">Files and Folders</div>
+										<div class="product-caption">
+											<div class="product-name black">Files and Folders</div>
 										</div>
 									</div>
 								</div>
@@ -106,11 +101,12 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-xs-12">
+											<h2 class="text-center">WHO WE ARE?</h2>
 											<div class="txt">
-												<h2 class="text-center">WHO WE ARE?</h2>
 												<p>Pin to Papers Multiservices is supplier of Copier Paper, Office Supplies and IT Products. In
 													addition, we also supply Files, Folders and Office Consumables. We always believed in constant
-													service offering to our customer by very innovative and unique way. Our dedicated team always
+													service offering to our customer by very innovative and unique way.</p> 
+												<p>Our dedicated team always
 													try to satisfy our customers by providing best Services and Quality Products which we have. We
 													have large product range which includes all types of office needs. We majorly dealing in
 													Copier Papers, Office Essential Products (Files, folder, Binder clips, Writing Essentials, Art
