--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
 <body>
 	<!-- main container of all the page elements -->
 	<div id="wrapper">
-		<!-- Page Loader -->
-		<div id="pre-loader" class="loader-container">
-			<div class="loader">
-				<img src="images/svg/rings.svg" alt="loader">
-			</div>
-		</div>
-		<!-- W1 start here -->
 		<div class="w1">
 			<!-- mt header start here -->
 			<header id="mt-header">
@@ -66,9 +59,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<div id="products" class="mt-productsc">
-								<div class="mt-heading text-uppercase text-center">
-									<h2 class="heading">PRODUCTS</h2>
-								</div>
+								<h2 class="text-center">PRODUCTS</h2>
 								<div class="row">
 									<div class="col-sm-6 col-xs-12 mb-4">
 										<img src="images/office-supplies.jpg" alt="image description">
