Remove jquery & decrease image size

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</div>
 			</main>
 			<!-- footer of the Page -->
-			<footer id="mt-footer" class="wow fadeInUp">
+			<footer id="mt-footer">
 				<!-- Footer Area of the Page -->
 				<div class="footer-area">
 					<div class="container">
@@ -170,11 +170,6 @@
 		</footer><!-- footer of the Page end -->
 	</div>
 	</div>
-	<!-- include jQuery -->
-	<script src="js/jquery.js"></script>
-	<!-- <script src="js/plugins.js"></script> -->
-	<!-- include jQuery -->
-	<script src="js/jquery.main.js"></script>
 </body>
 
 </html>
